--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">PruebaTecnica</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="default_web_client">485087445512-p83rmedskefe06d9d5fv235ubtb7toh4.apps.googleusercontent.com</string>
 </resources>
